
[package]
name = "PCA"
version = "0.1.0"

[dependencies]
processing = { path = "processing", version = "0.1.0" }

[dev-dependencies]
ndarray = { version = "0.13" , features = ["rayon", "serde", "approx"]}
ndarray-rand = "0.11"
rand_isaac = "0.2.0"
ndarray-npy = { version = "0.5", default-features = false }

[workspace]
members = ["processing"]