[package]
name = "processing"
version = "0.1.0"

[features]
default = []
openblas = ["ndarray-linalg/openblas"]
intel-mkl = ["ndarray-linalg/intel-mkl"]
netlib = ["ndarray-linalg/netlib"]

[dependencies]
ndarray = "0.13"
ndarray-rand = "0.11"
ndarray-linalg = "0.12"
ndarray-vision = "0.1.1"
openblas-src = "0.7"
serde = { version = "1", features = ["derive"] }